Fix header menu, Tire_view Alignment

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1203,7 +1203,7 @@ a:hover, a:focus {
 }
 .dropdown-menu li > a {
     color:#fff !important;
-    padding: 2px 10px !important;
+    padding: 0px 10px !important;
     font-family: poppins !important;
     font-size: 12px !important;
 }
@@ -5337,6 +5337,7 @@ h2.price {
     margin: 5px 0px !important;
     font-size: 10px !important;
   }
+  
 }
 
 @media (min-width: 360px) and (max-width: 767px)
@@ -5574,6 +5575,26 @@ h2.price {
        float: none;
        margin: 0;
        vertical-align: top;
+  }
+  .header-text h2 
+  {
+    font-size: 20px !important;
+    color: #fff !important;
+  }
+  .header-text h3 span
+  {
+    font-size:12px !important;
+  }
+  .col-md-12.text-center h3
+  {
+      margin:0px 0px !important;
+  }
+  .btn-sm 
+  {
+    padding: 0px 5px;
+    min-width: 0px !important;
+    border: 1px solid #fff !important;
+    font-size: 10px !important;
   }
 }
 
@@ -7259,7 +7280,7 @@ button {
 }
 .dropdown-menu.nav-dropdown li {
     padding: 5px 0px !important;
-    border-bottom:1px solid #22222254 !important;
+    
 }
 .product-thumb .image img,.product-thumb .image img.image_thumb_swap
 {
@@ -7907,7 +7928,7 @@ button {
 
 .fal-logo img
 {
-    margin: 95px 0px;
+    margin: 80px 0px;
 }
 ::-webkit-scrollbar
 {
@@ -8243,12 +8264,16 @@ button.btn.btn-inverse.btn-block.btn-lg
     list-style-type: none !important;
     column-count: 7;
 }
+.col-sm-12.tire-menu.tire-two ul
+{
+    column-count: 8;
+}
 
 .col-sm-12.tire-menu ul li {
     color: #000 !important;
     font-size: 12px !important;
     padding: 5px 0px !important;
-    /*border-bottom:1px solid #22222254 !important;*/
+    border-bottom: 1px solid #22222254 !important;
 }
 
 .col-sm-12.tire-menu li a:hover {
@@ -8690,13 +8715,54 @@ ol.carousel-indicators {
 /* Home Banner End */
 
 /* Tirelist Page Start */
-
-select#minprice,select#maxprice {
-    box-shadow: inset 0 0 5px #0e1661;
-    color: #000 !important;
+.spinner input {
+    text-align: center;
+  }
+  
+  .input-group-btn-vertical {
+    position: relative;
+    white-space: nowrap;
+    width: 2%;
+    vertical-align: middle;
+    display: table-cell;
+  }
+  
+  .input-group-btn-vertical > .btn {
+    display: block;
+    float: none;
+    width: 12%;
+    max-width: 100%;
+    padding: 8px;
+    margin-left: -1px;
+    position: relative;
+    border-radius: 0;
+  }
+  
+  .input-group-btn-vertical > .btn:first-child {
+    border-top-right-radius: 4px;
+  }
+  
+  .input-group-btn-vertical > .btn:last-child {
+    margin-top: -2px;
+    border-bottom-right-radius: 4px;
+  }
+  
+  .input-group-btn-vertical i {
+    position: absolute;
+    top: 0;
+    left: 4px;
+  }
+  .input-group.spinner .form-control
+  {
+      border:1px solid #eaeaea;
+  }
+  .input-group-btn-vertical .btn-default {
+    background: #ecb23d !important;
+  }
+  .table-responsive
+  {
+    overflow-x: hidden;
+  }
+  .col-sm-6.pagi-left p {
+    text-align: left !important;
 }
-.widget-banner {
-    padding: 10px 0px !important;
-}
-/* Tirelist Page End */
-
